--- a/home.html
+++ b/home.html
@@ -7,12 +7,7 @@
 </head>
 <body>
     <h1>hello git</h1>
-    <style>
-        *{
-            margin: 0;
-            padding:0;
-        }
-       
+       jsnddn
     </style>
 </body>
 </html>
