--- a/home.html
+++ b/home.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>hello git</h1>
-       jsnddn
+    <style>
+        *{
+            margin: 0;
+            padding:0;
+        }
+       ahdhkajnd
     </style>
 </body>
 </html>
